--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,88 +1,13 @@
 body {
-  background: linear-gradient(to bottom, #acb3b9, #ffffff);
+  background: linear-gradient(to bottom, #c0eac1, #241280);
   font-family: Arial, sans-serif;
-  margin: 0;
+  margin-left:'10px';
   padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
-
-.container {
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-  padding: 2rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.form-container {
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 2rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  /* margin-bottom: 15%; */
-}
-
-h1 {
-  text-align: center;
-  margin-bottom: 1.5rem;
-}
-
-input {
-  width: 100%;
-  padding: 0.5rem;
-  margin: 0.5rem 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-button {
-  display: block;
-  width: 100%;
-  padding: 0.5rem;
-  background-color: #3498db;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-top: 2%;
-}
-
-button:disabled {
-  background-color: #d3d3d3;
-  cursor: not-allowed;
-}
-
-.loading-container {
-  text-align: center;
-  margin-top: 1rem;
-}
-
-.loading-circle {
-  border: 5px solid #f3f3f3;
-  border-top: 5px solid #3498db;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 2s linear infinite;
-  display: inline-block;
-}
-
-.result-container {
-  margin-top: 1rem;
-}
-
-.result-list {
-  list-style: none;
-  padding: 0;
-}
-
-.result-item {
-  padding: 0.5rem 0;
-  border-bottom: 1px solid #ccc;
-}
-
 
 @keyframes spin {
   0% {
