--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to bottom, #c0eac1, #241280);
+  background: #dedbf1;
   font-family: Arial, sans-serif;
   margin-left:'10px';
   padding: 0;
